--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -30,3 +30,7 @@ $grey-color-dark:     darken($grey-color, 25%);
 
 $white-color: #ffffff !default;
 $black-color: #000000 !default;
+
+
+$my-color:            #2a9d8f !default;
+$my-color-light:      lighten($my-color, 25%);
